subsections in the report to describe the experimental setup

--- a/report/report.tex
+++ b/report/report.tex
@@ -59,7 +59,7 @@
     \section{Introduction}
     \label{sec:intro}
         Hardware design has become nowadays an activity which is, to say the least, extremely
-        complex, if not error-prone. The size of circuits has increased. Also, low-level
+        complex, if not error-prone. The sheer size of circuits has increased. Also, low-level
         concerns such as power consumption, error correction, parallelization and layout
         in general have to be incorporated earlier and earlier in the design process, breaking
         modularity and making it harder to validate and verify the correctness of circuits.
@@ -82,26 +82,34 @@
         next design should gain some insight about the strengths and weaknesses of each language and
         have an easier time choosing one.
 
-    \section{Research methods}
+    \section{Methodology}
     \label{sec:methods}
         In this project, we compared a number of functional hardware EDSLs that we considered
         representative (more details on the choice of EDSLs further ahead). The comparison was
         performed on a number of \emph{aspects} for each EDSL, and the analysis was done by
         considering a sample set of circuits used as case studies.
 
-        We tried to model all circuits in all EDSLs, and as similarly as possible in all of them. To
-        avoid using any of the analyzed EDSLs as ``base'', we had the circuits specified.
+        We tried to model all circuits in all EDSLs considered, and as similarly as possible in
+        all of them. To avoid using any of the analyzed EDSLs as ``base'', we had the circuits
+        specified in a neutral hardware description language.
 
-        Lorem ipsum.
+
+    \section{The research space}
+    \label{sec:languages}
+
+        \subsection{The languages}
+        \label{subsec:languages}
+
+        \subsection{The circuits to be modeled}
+        \label{subsec:circuits}
+
+        \subsection{The aspects evaluated}
+        \label{subsec:aspects}
+
 
 
 %% Research question
 %% =================
-%% In this experimentation project we compare several embedded hardware description languages,
-%% also questioning along the way what constitutes good criteria for comparison, as well as
-%% what circuits can be used as good case studies to evaluate the languages based on the chosen
-%% criteria.
-%% 
 %% A further question to be investigated in this project is what recent developments in
 %% Haskell (compiler extensions, etc.), as well as dependently-typed programming, could be used to
 %% enhance the EHDLs studied.
