--- a/report/report.tex
+++ b/report/report.tex
@@ -87,7 +87,7 @@
         In this project, we compared a number of functional hardware EDSLs that we considered
         representative (more details on the choice of EDSLs further ahead). The comparison was
         performed on a number of \emph{aspects} for each EDSL, and the analysis was done by
-        considering a sample set of circuits used as case studies.
+        considering a \emph{sample set of circuits} used as case studies.
 
         We tried to model all circuits in all EDSLs considered, and as similarly as possible in
         all of them. To avoid using any of the analyzed EDSLs as ``base'', we had the circuits
@@ -97,18 +97,36 @@
         \label{subsec:languages}
             The embedded Hardware Description Languages we decided to analyze are:
             \begin{description}
-                \item[Lava] The Lava language, developed initially at Chalmers University in Sweden.
-                    Lava is deeply embedded in Haskell, and provides features such as netlist
-                    generation and circuit verification using SAT-solvers. There are several
-                    ``dialects'' of Lava available, and the one used for this project is considered
-                    the ``canonical'' one, originally developed at Chalmers.
+                \item[Lava] The Lava\cite{lava1998} language, developed initially at Chalmers
+                    University in Sweden.  Lava is deeply embedded in Haskell, and provides features
+                    such as netlist generation and circuit verification using SAT-solvers. There are
+                    several ``dialects'' of Lava available, and the one used for this project is
+                    considered the ``canonical'' one, originally developed at Chalmers.
 
                 \item[ForSyDe] The Haskell ForSyDe library is an EDSL based on the ``Formal System
-                    Design'' approach, developed at the swedish Royal Institute of Technology (KTH).
-                    It offers both shallow and deep embeddings, and uses a significantly different
-                    approach to circuit modelling, using \emph{Template Haskell} to allow the
-                    designer to describe circuit with ``plain'' Haskell syntax.
+                    Design'' approach\cite{forsyde1999}, developed at the swedish Royal Institute of
+                    Technology (KTH).  It offers both shallow and deep embeddings, and uses a
+                    significantly different approach to circuit modelling, using \emph{Template
+                        Haskell} to allow the designer to describe circuit with ``plain'' Haskell
+                    syntax.
+
+                \item[Coquet] The Coquet\cite{coquet2011} EDSL differs from the other 2 mainly
+                    because it's embedded in a dependently-typed programming language (the Coq theorem
+                    prover). Coquet aims to allow the hardware designer to describe his circuits and
+                    then \emph{interactively} prove theorems about the behaviour of whole
+                    \emph{families} of circuits (using proofs by induction).
             \end{description}
+
+            The Lava EDSL has several ``dialects'', among which are Xilinx-Lava, York-Lava,
+            Kansas-Lava and Chalmers-Lava. Xilinx-Lava was developed by Satnam Singh and has a greater emphasis on the
+            \emph{layout} of the described circuits, focusing on their implementation in Xilinx's
+            FPGAs. York-Lava was developed as part of the Reduceron project, and is a variation of
+            Chalmers-Lava, omitting some features and adding some others, like a ``Prelude'' of
+            commonly used circuits ((de)multiplexers, (de)coders, etc.), RAM memory blocks, among
+            others.
+
+            %% Kansas-Lava, Chalmers-Lava
+
 
         \subsection{The circuits to be modeled}
         \label{subsec:circuits}
@@ -117,6 +135,8 @@
         \label{subsec:aspects}
 
 
+    \bibliographystyle{plain}
+    \bibliography{references}
 
 %% Research question
 %% =================
