report with reasoning behind the choice of circuits

--- a/report/references.bib
+++ b/report/references.bib
@@ -35,3 +35,11 @@
     publisher={Springer}
 }
 
+@book{nand2tetris-book,
+    title={The Elements of Computing Systems: building a modern computer from first principles},
+    author={Noam Nisan, Shimon Shocken},
+    year={2012},
+    edition={3rd},
+    publisher={MIT Press},
+}
+
